--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="col-md-4">
                 <div class="feature-card">
                     <h3><i class="fas fa-code"></i> Code Editor</h3>
-                    <p>Write Python code with IDE Features.                             </p>
+                    <p>Write Python code with Core IDE Features With Syntax Highlights.</p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -83,7 +83,15 @@
             <div class="col-md-4">
                 <div class="feature-card">
                     <h3><i class="fas fa-plug"></i> Python Embedded</h3>
-                    <p>Includes an embedded Python interpreter, no external installation needed.</p>
+                    <p>Includes Python 3.13.0, no external installation needed.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col-md-4">
+                <div class="feature-card">
+                    <h3><i class="fas fa-cogs"></i> GCC and G++</h3>
+                    <p>Includes GCC and G++ compilers for running and building C and C++ programs.</p>
                 </div>
             </div>
         </div>
@@ -93,7 +101,7 @@
     <div id="download" class="container text-center">
         <h2>Download NCERT Learn IDE</h2>
         <p>Click the button below to download NCERT Learn IDE and start coding!</p>
-        <a href="https://drive.google.com/file/d/1QkflZW2FnXDYjRjPDx8bKdJrGMHg4mE1/view?usp=drive_link" class="download-btn" download>Download IDE <i class="fas fa-download"></i></a>
+        <a href="https://drive.google.com/file/d/1kk1z87nro0evuI-ktlyheHorqsGD38C8/view?usp=drive_link" class="download-btn" download>Download IDE <i class="fas fa-download"></i></a>
     </div>
 
     <!-- Requirements Section -->
@@ -103,15 +111,16 @@
             <li><strong>Operating System:</strong> Windows 10/11</li>
             <li><strong>Processor:</strong> 64-bit</li>
             <li><strong>RAM:</strong> 2 GB (minimum)</li>
-            <li><strong>Disk Space:</strong> 200 MB (for IDE and embedded Python)</li>
+            <li><strong>Disk Space:</strong> 940 MB (for IDE, embedded Python, GCC, and G++)</li>
         </ul>
     </div>
 
     <!-- About the Author Section -->
     <div class="container author-section">
         <h2>About the Author</h2>
-        <p><strong>Muhammed Shafin P</strong> is a passionate software developer and an advocate for educational technology. With a deep interest in Python programming, he has dedicated his work to developing tools that simplify learning and make coding accessible to everyone. This IDE, <em>NCERT Learn IDE</em>, is the result of his vision to help students and developers harness the power of Python through an easy-to-use, embedded environment.</p>
-        <p>In his free time, he enjoys experimenting with new technologies, contributing to open-source projects, and spreading the knowledge of programming through online tutorials and workshops.</p>
+        <p><strong>Muhammed Shafin P</strong> is a passionate software developer and a 12th-grade student from Chungathara, Nilambur, Kerala. With a deep interest in Python programming and technology, he has dedicated his efforts to creating tools that simplify learning and make coding accessible to everyone.</p>
+        <p>This IDE, <em>NCERT Learn IDE</em>, reflects his vision of empowering students and developers by providing an easy-to-use, feature-rich coding environment with built-in support for Python, GCC, and G++.</p>
+        <p>In his free time, Muhammed enjoys experimenting with new technologies, contributing to open-source projects, and teaching programming through online platforms.</p>
         <p>For support, please email: <a href="mailto:hejhdiss@gmail.com">hejhdiss@gmail.com</a></p>
     </div>
 
@@ -129,4 +138,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
-
