--- a/index.html
+++ b/index.html
@@ -111,7 +111,12 @@
             <li><strong>Operating System:</strong> Windows 10/11</li>
             <li><strong>Processor:</strong> 64-bit</li>
             <li><strong>RAM:</strong> 2 GB (minimum)</li>
+            <li><strong>Python:</strong> 3.13.0</li>
+            <li><strong>Compilers:</strong> GCC and G++</li>
             <li><strong>Disk Space:</strong> 940 MB (for IDE, embedded Python, GCC, and G++)</li>
+            <li><strong>Download Size:</strong> 147 MB</li>
+
+ 
         </ul>
     </div>
 
