--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <a href="https://mega.nz/file/6dkCTazB#fOZZ0n4T8d95L7nZ1T9CTJtt6Aq0mM9zbrYBQ6UMxV0" class="btn mega-btn w-100 mb-2">
                         <i class="fab fa-megaport"></i> Download via MEGA
                     <a href="./certificate.pfx" class="btn certify-btn w-100 mb-2">
-                        <i class="fas fa-download"></i> Download certificate
+                        <i class="fas fa-download"></i> Download certificate Password: Muhammed Shafin P
                     </a>
                 </div>
             </div>
