--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
             <li><strong>Download Size:</strong> 136 MB</li>
         </ul>
     </div>
+    <!-- Note Section -->
+    <div class="container requirements-section">
+        <h2>Important Note</h2>
+        <p>This IDE is not a virus. It is developed with security and user trust as priorities. The provided certificate is self-signed and can be downloaded from this page to verify the software's authenticity.</p>
+        <p>You can download the license and certificate from the links in the download section. If prompted, the password for the certificate is: <strong>Muhammed Shafin P</strong>.</p>
+        <p>We recommend verifying the certificate before installation to ensure safe usage. Feel free to contact support for any assistance.</p>
+        <p><strong>This is an open-source project</strong>, and its source code is available for review and contribution. We welcome developers to participate and improve the IDE.</p>
+    </div>
 
     <!-- About the Author Section -->
     <div class="container author-section">
@@ -191,10 +199,10 @@
                 </div>
                 <div class="modal-body">
                     <p>Select a download option:</p>
-                    <a href="https://drive.google.com/file/d/1J4vAfeXOvNnHtD_IwMUlkYhDxlwa7aUh/view?usp=drive_link" class="btn google-btn w-100 mb-2">
+                    <a href="https://drive.google.com/file/d/1h8hfdgMmfy_cZOLQ4p5EmEbpFSIZzFKG/view?usp=drive_link" class="btn google-btn w-100 mb-2">
                         <i class="fab fa-google-drive"></i> Download via Google Drive
                     </a>
-                    <a href="https://mega.nz/file/6dkCTazB#fOZZ0n4T8d95L7nZ1T9CTJtt6Aq0mM9zbrYBQ6UMxV0" class="btn mega-btn w-100 mb-2">
+                    <a href="https://mega.nz/file/7VNAlRxT#XLXxe8BHk1OI9Cs_lklonN34Z6h-h5pg-BaGfuxfXnI" class="btn mega-btn w-100 mb-2">
                         <i class="fab fa-megaport"></i> Download via MEGA
                     <a href="./certificate.pfx" class="btn certify-btn w-100 mb-2">
                         <i class="fas fa-download"></i> Download certificate Password: Muhammed Shafin P
