--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
                 </div>
                 <div class="modal-body">
                     <p>Select a download option:</p>
-                    <a href="https://drive.google.com/file/d/1h8hfdgMmfy_cZOLQ4p5EmEbpFSIZzFKG/view?usp=drive_link" class="btn google-btn w-100 mb-2">
+                    <a href="https://drive.google.com/file/d/1lQ00AoiuZChwpWTUxh4fWNzCWT-DrB1D/view?usp=drive_link" class="btn google-btn w-100 mb-2">
                         <i class="fab fa-google-drive"></i> Download via Google Drive
                     </a>
-                    <a href="https://mega.nz/file/7VNAlRxT#XLXxe8BHk1OI9Cs_lklonN34Z6h-h5pg-BaGfuxfXnI" class="btn mega-btn w-100 mb-2">
+                    <a href="https://mega.nz/file/DE1WFRqY#Iq2TTTEKJR0Itia65X-ZtZz1TW8ypvl-MSxyka19az8" class="btn mega-btn w-100 mb-2">
                         <i class="fab fa-megaport"></i> Download via MEGA
                     <a href="./certificate.pfx" class="btn certify-btn w-100 mb-2">
                         <i class="fas fa-download"></i> Download certificate Password: Muhammed Shafin P
